--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HeyGen Streaming Embed Demo</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #f5f5f5;
-      height: 200vh;
-    }
-    h1 {
-      padding: 20px;
-    }
-  </style>
+  <script src="https://cdn.livekit.io/livekit-client/latest/livekit.min.js"></script>
 </head>
 <body>
+  <h1>LiveKit Test Avatar</h1>
+  <video id="remoteVideo" autoplay playsinline></video>
 
-<h1>Interactive Avatar Embed Demo</h1>
+  <script>
+    const url = "wss://chatham-6f5vepem.livekit.cloud/agent"; // your server URL
+    const token = "PASTE_YOUR_ACCESS_TOKEN_HERE"; // generated from Python
+    const roomName = "test-room";
 
-<script>!function(window){const host="https://labs.heygen.com",url=host+"/guest/streaming-embed?share=eyJxdWFsaXR5IjoiaGlnaCIsImF2YXRhck5hbWUiOiJHcmFoYW1fQ2hhaXJfU2l0dGluZ19wdWJs%0D%0AaWMiLCJwcmV2aWV3SW1nIjoiaHR0cHM6Ly9maWxlczIuaGV5Z2VuLmFpL2F2YXRhci92My8yMTQ2%0D%0AZTJjOGMwNzA0NWMwYjM1OTg2ODNkNDQ3M2ZkZF81NTM0MC9wcmV2aWV3X3RhcmdldC53ZWJwIiwi%0D%0AbmVlZFJlbW92ZUJhY2tncm91bmQiOmZhbHNlLCJrbm93bGVkZ2VCYXNlSWQiOiI3YmE2MTVlZDc1%0D%0AMjA0OGJmODkwNjZiZjJiOGY3YzM3YiIsInVzZXJuYW1lIjoiMWFmZmE5NzQ0NjU2NGMwOThkNDkx%0D%0AZmJkMmVhOWVlOWMifQ%3D%3D&inIFrame=1",clientWidth=document.body.clientWidth,wrapDiv=document.createElement("div");wrapDiv.id="heygen-streaming-embed";const container=document.createElement("div");container.id="heygen-streaming-container";const stylesheet=document.createElement("style");stylesheet.innerHTML=`\n  #heygen-streaming-embed {\n    z-index: 9999;\n    position: fixed;\n    left: 40px;\n    bottom: 40px;\n    width: 200px;\n    height: 200px;\n    border-radius: 50%;\n    border: 2px solid #fff;\n    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.12);\n    transition: all linear 0.1s;\n    overflow: hidden;\n\n    opacity: 0;\n    visibility: hidden;\n  }\n  #heygen-streaming-embed.show {\n    opacity: 1;\n    visibility: visible;\n  }\n  #heygen-streaming-embed.expand {\n    ${clientWidth<540?"height: 266px; width: 96%; left: 50%; transform: translateX(-50%);":"height: 366px; width: calc(366px * 16 / 9);"}\n    border: 0;\n    border-radius: 8px;\n  }\n  #heygen-streaming-container {\n    width: 100%;\n    height: 100%;\n  }\n  #heygen-streaming-container iframe {\n    width: 100%;\n    height: 100%;\n    border: 0;\n  }\n  `;const iframe=document.createElement("iframe");iframe.allowFullscreen=!1,iframe.title="Streaming Embed",iframe.role="dialog",iframe.allow="microphone",iframe.src=url;let visible=!1,initial=!1;window.addEventListener("message",(e=>{e.origin===host&&e.data&&e.data.type&&"streaming-embed"===e.data.type&&("init"===e.data.action?(initial=!0,wrapDiv.classList.toggle("show",initial)):"show"===e.data.action?(visible=!0,wrapDiv.classList.toggle("expand",visible)):"hide"===e.data.action&&(visible=!1,wrapDiv.classList.toggle("expand",visible)))})),container.appendChild(iframe),wrapDiv.appendChild(stylesheet),wrapDiv.appendChild(container),document.body.appendChild(wrapDiv)}(globalThis);</script> 
+    const room = new LiveKit.Room();
+    room.connect(url, token, { room: roomName }).then(() => {
+      console.log("Connected to room:", roomName);
+
+      room.on('trackSubscribed', (track, participant) => {
+        if (track.kind === 'video') {
+          const videoElement = document.getElementById('remoteVideo');
+          track.attach(videoElement);
+        }
+      });
+    }).catch(err => console.error(err));
+  </script>
 </body>
 </html>
