--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script>
     // ===== CONFIGURATION =====
     const LIVEKIT_URL = "wss://chatham-6f5vepem.livekit.cloud"; // your LiveKit server
-    const ROOM_NAME = "test-room"; // must match agent's room
+    const ROOM_NAME = "AW_abMnWdRyAKXA"; // must match agent's room
     const TOKEN = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJicm93c2VyLXRva2VuIiwiaXNzIjoiQVBJQ0FzSmFhOVY1RG5rIiwic3ViIjoidXNlcjEiLCJpYXQiOjE3NzA2NDczNDgsImV4cCI6MTc3MDY1MDk0OCwicm9vbSI6InRlc3Qtcm9vbSIsInJvb21fam9pbiI6dHJ1ZX0.eOnyaS45GjZAnhJQ9Q3Bq6UMBU7XJ4xHFMoFXrT-H1M"; // token generated from Python agent
 
     // ===== GLOBAL VARIABLES =====
