--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LiveAvatar Voice Chat</title>
-  <script src="https://cdn.livekit.io/livekit-client/latest/livekit.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/livekit-client/dist/livekit-client.umd.min.js"></script>
   <style>
     body {
       font-family: sans-serif;
