--- a/index.html
+++ b/index.html
@@ -1,91 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>LiveAvatar Voice Chat</title>
+
+  <!-- Correct LiveKit client SDK from jsdelivr -->
   <script src="https://cdn.jsdelivr.net/npm/livekit-client/dist/livekit-client.umd.min.js"></script>
+
   <style>
     body {
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
-      padding: 2rem;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 2rem;
     }
     video {
       width: 480px;
       height: 360px;
-      border: 2px solid #333;
-      border-radius: 8px;
+      border: 2px solid #444;
+      margin-top: 1rem;
       background: black;
     }
     button {
-      padding: 0.5rem 1rem;
+      padding: 0.6rem 1.2rem;
       font-size: 1rem;
+      margin-top: 1rem;
       cursor: pointer;
     }
   </style>
 </head>
 <body>
   <h1>Talk to Your LiveAvatar</h1>
-  <video id="avatarVideo" autoplay playsinline></video>
+
+  <video id="remoteVideo" autoplay playsinline></video>
+  <br />
   <button id="startBtn">Start Voice Chat</button>
 
   <script>
-    // ===== CONFIGURATION =====
+    // 🔧 CONFIGURATION — Replace these with your real values
     const LIVEKIT_URL = "wss://chatham-6f5vepem.livekit.cloud"; // your LiveKit server
-    const ROOM_NAME = "AW_abMnWdRyAKXA"; // must match agent's room
+    const ROOM_NAME = "test-room";  
     const TOKEN = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJicm93c2VyLXRva2VuIiwiaXNzIjoiQVBJQ0FzSmFhOVY1RG5rIiwic3ViIjoidXNlcjEiLCJpYXQiOjE3NzA2NDczNDgsImV4cCI6MTc3MDY1MDk0OCwicm9vbSI6InRlc3Qtcm9vbSIsInJvb21fam9pbiI6dHJ1ZX0.eOnyaS45GjZAnhJQ9Q3Bq6UMBU7XJ4xHFMoFXrT-H1M"; // token generated from Python agent
 
-    // ===== GLOBAL VARIABLES =====
     let room;
 
-    async function startVoiceChat() {
-      // 1️⃣ Create a room instance
-      room = new LiveKit.Room();
+    document.getElementById("startBtn").onclick = async () => {
+      const startBtn = document.getElementById("startBtn");
+      startBtn.disabled = true;
+      startBtn.innerText = "Connecting...";
 
-      // 2️⃣ Connect to LiveKit room
       try {
-        await room.connect(LIVEKIT_URL, TOKEN, { room: ROOM_NAME });
+        // 1) Create Room instance
+        room = new LivekitClient.Room();
+
+        // 2) Connect to LiveKit
+        await room.connect(LIVEKIT_URL, TOKEN, { 
+          room: ROOM_NAME,
+          autoSubscribe: true
+        });
         console.log("Connected to room:", ROOM_NAME);
-      } catch (err) {
-        console.error("Failed to connect:", err);
-        return;
-      }
+        startBtn.innerText = "Connected! Recording audio…";
 
-      // 3️⃣ Subscribe to avatar video/audio tracks
-      room.on('trackSubscribed', (track, participant) => {
-        if (track.kind === 'video') {
-          track.attach(document.getElementById('avatarVideo'));
-        }
-        if (track.kind === 'audio') {
-          const audioEl = new Audio();
-          audioEl.autoplay = true;
-          track.attach(audioEl);
-        }
-      });
+        // 3) Listen for remote tracks (avatar video / audio)
+        room.on(LivekitClient.RoomEvent.TrackSubscribed, (track, publication, participant) => {
+          if (track.kind === "video" || track.kind === "audio") {
+            const el = track.attach();
+            document.getElementById("remoteVideo").replaceWith(el);
+          }
+        });
 
-      // 4️⃣ Capture microphone input
-      try {
+        // 4) Capture and publish microphone audio
         const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
         for (const track of stream.getAudioTracks()) {
-          room.localParticipant.publishTrack(track);
+          await room.localParticipant.publishTrack(track);
         }
-        console.log("Microphone access granted, audio publishing started");
+
       } catch (err) {
-        console.error("Microphone access denied:", err);
+        console.error("Connection failed:", err);
+        startBtn.innerText = "Connection Failed — See Console";
       }
-
-      // 5️⃣ Optional: data channel for text commands
-      const dc = room.localParticipant.createDataChannel('agent');
-      dc.onopen = () => console.log("Data channel open");
-      dc.onmessage = (event) => console.log("Message from agent:", event.data);
-    }
-
-    document.getElementById('startBtn').addEventListener('click', startVoiceChat);
+    };
   </script>
 </body>
 </html>
+
 
 
