--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     // 🔧 CONFIGURATION — Replace these with your real values
     const LIVEKIT_URL = "wss://chatham-6f5vepem.livekit.cloud"; // your LiveKit server
     const ROOM_NAME = "test-room";  
-    const TOKEN = "92sp6C59uxNWYZFCpMKdisQYpdKhTD7i"; // token generated from Python agent
+    const TOKEN = "Valerie's4"; // token generated from Python agent
 
     let room;
 
